# TodoList

./: .gitignore  CMakeLists.txt  List.cpp  List.h  README.md  Task.cpp  Task.h  main.cpp
test/: CMakeLists.txt  ElementTest.cpp  ListElementFixture.cpp
test/lib/googletest-main/docs/: gmock_cook_book.md
test/lib/googletest-main/googlemock/include/gmock/internal/: gmock-internal-utils.h
test/lib/googletest-main/googletest/include/gtest/internal/: gtest-internal.h
